--- a/sitemap.html
+++ b/sitemap.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css" integrity="sha512-aupidr80M36SeyviA/hZ2uEPnvt2dTJfyjm9y6z1MgaV13TgzmDiFdsH3cvSNG27mRIj7gJ2gNeg1HeySJyE3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0013"/>
-		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0014"/>  	
+		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0015"/>  	
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -64,9 +64,8 @@
 
 						<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 							<ol>
-								<li>Undisciplining In and Through Contemporary Texts
+								<li><a href="html/lesson_plans/contemporary_undisciplining_introduction.html">Undisciplining In and Through Contemporary Texts</a>
 									<ol>
-										<li><a href="html/lesson_plans/contemporary_undisciplining_introduction.html">Introduction: Undisciplining In and Through Contemporary Texts</a></li>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_dracula.html">Undisciplining <em>Dracula</em>: <em>Fledgling</em> and Afrofuturism</a></li>
 										<li><a href="html/lesson_plans/contemporary_re-reading_archives.html">Re-Reading Nineteenth-Century Archives</a></li>
@@ -74,7 +73,6 @@
 										<li><a href="html/lesson_plans/contemporary_africanfuturism.html">Africanfuturism and British Catastrophe Literature</a></li>
 										<li><a href="html/lesson_plans/contemporary_postcolonial_texts.html">Colonial/Postcolonial Texts of the “Dark Continent”</a></li>
 										<li><a href="html/lesson_plans/contemporary_detection_and_empire.html">Detection and the Logics of Empire</a></li>
-										<li><a href="html/lesson_plans/contemporary-jane-eyre-parasite.html">Undisciplining Through <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em></a></li>
 									</ol>
 								</li>
 								<li><a href="/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html">Palestine in the Eighteenth and Nineteenth Centuries</a>
@@ -94,7 +92,6 @@
 										<li><a href="/html/lesson_plans/east_asia_victorian_realism.html">Victorian Realism, China, and the Politics of Form</a></li>
 									</ol>
 								</li>
-
 								<li><a href="/html/lesson_plans/seacole_caribbean_introduction.html">Mary Seacole and the Caribbean: Cluster Introduction</a>
 									<ol>
 										<li><a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a></li>
@@ -103,7 +100,6 @@
 										<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
 									</ol>
 								</li>
-
 								<li><a href="/html/lesson_plans/africa_diaspora_empire_introduction.html">Africa, Diaspora, and the British Empire: Cluster Introduction</a>
 									<ol>
 										<li><a href="/html/lesson_plans/africa_dramatic_monologue.html">Undisciplining the Dramatic Monologue</a></li>
@@ -120,20 +116,19 @@
 						<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 							<ol>
 								<li><a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li>
-								
-									<li>Religion, Secularism, Empire
+								<li>Religion, Secularism, Empire
 									<ol>
 										<li><a href="/html/syllabi/constructing_religion.html">Constructing Religion and Empire in Nineteenth-Century Literature</a></li>
 										<li><a href="/html/syllabi/religion_transimperial.html">Religion and the Transimperial: Literatures of Faith, Conquest, and Resistance</a></li>
 										<li><a href="/html/syllabi/empire_religion.html">Empire of Religion</a></li>
 									</ol>
+								</li>
 								<li>Beyond “Victorian” Literature
 									<ol>
 										<li><a href="/html/syllabi/multiethnic_literature.html">Multiethnic Literature: Global Neo-Victorians</a></li>
 										<li><a href="/html/syllabi/representative_survey.html"> British Literature II: A Representative Survey</a></li>
 									</ol>
 								</li>
-
 								<li>The Nineteenth-Century Religious Other
 									<ol>
 										<li><a href="/html/syllabi/muslim_other.html">The Muslim “Other” in Nineteenth-Century British Literature</a></li>
@@ -141,7 +136,6 @@
 										<li><a href="/html/syllabi/hinduism_imperial.html">Hinduism and Imperial Interventions in Victorian Literature</a></li>
 									</ol>
 								</li>
-
 								<li>Deconstructing the Literary Canon
 									<ol>
 										<li><a href="/html/syllabi/uvc_india_jude.html">UVC in India: Case Study of JUDE</a></li>
@@ -149,7 +143,6 @@
 										<li><a href="/html/syllabi/canon_fodder.html">Canon Fodder: What Should We Read?</a></li>
 									</ol>
 								</li>
-
 								<li>Centering Black Studies
 									<ol>
 										<li><a href="/html/syllabi/race_slavery_empire.html">Race, Trans-Atlantic Slavery, and the Empire</a></li>
@@ -157,7 +150,6 @@
 										<li><a href="/html/syllabi/victorian_human.html">The Victorian and the Human</a></li>
 									</ol>
 								</li>
-
 								<li>Gender and Empire
 									<ol>
 										<li><a href="/html/syllabi/victorian_women_world.html">Victorian Women of the World</a></li>
@@ -193,7 +185,7 @@
 
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 							<ol>
-								<li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor (2023)</a></li>
+								<!-- <li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor (2023)</a></li> -->
 								<li><a href="/html/about/statement_on_using_generative_ai.html">Statement on Using Generative AI</a></li>
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
