create cont lp main tiles

--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -45,6 +45,26 @@
 					<p>These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
+				<section aria-labelledby="contemporary-1">
+					<h3 id="contemporary-1">Undisciplining in and through Contemporary Texts</h3>
+					<div><a href="/html/lesson_plans/contemporary_undisciplining_introduction.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0084-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0084-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0084-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0084-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0084-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0084-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0084-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0084-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0084-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A sweeping vista of the city of Palestine with people kneeling in the foreground."/><span>Cluster Introduction</span><p class="new">New</p></a></div>
+				</section>
+
+				<section>
+					<h3 id="contemporary-2">Undisciplining in and through Contemporary Texts</h3>
+					<ul>
+						<li>Lesson Plans</li>
+						<li><a href="/html/lesson_plans/contemporary_africanfuturism.html">Africanfuturism and Catastrophe</a></li>
+						<li><a href="/html/lesson_plans/contemporary_bronte_phillips.html">Wuthering Heights and The Lost Child</a></li>
+						<li><a href="/html/lesson_plans/contemporary_detection_and_empire.html">Detection and the Logics of Empire</a></li>
+						<li><a href="/html/lesson_plans/contemporary_postcolonial_texts.html">Postcolonial Texts of the “Dark Continent”</a></li>
+						<li><a href="/html/lesson_plans/contemporary_re-reading_archives.html">Re-Reading Nineteenth-Century Archives</a></li>
+						<li><a href="/html/lesson_plans/contemporary_undisciplining_dracula.html">Dracula, Fledgling, and Afrofuturism</a></li>
+						<li><a href="/html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Silko</a></li>
+						<li><a href="/html/lesson_plans/contemporary-jane-eyre-parasite.html">Jane Eyre, Re Jane, and Parasite</a></li>
+					</ul>
+				</section>
+
 				<section aria-labelledby="palestine-1">
 					<h3 id="palestine-1">Palestine in the 18th and 19th Centuries</h3>
 					<div><a href="/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0077-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0077-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0077-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0077-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0077-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0077-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0077-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0077-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0077-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A sweeping vista of the city of Palestine with people kneeling in the foreground."/><span>Cluster Introduction</span><p class="new">New</p></a></div>
