--- a/html/lesson_plans/contemporary_detection_and_empire.html
+++ b/html/lesson_plans/contemporary_detection_and_empire.html
@@ -272,7 +272,7 @@
 									<ul>
 										<li>Ask students to close-read illustrations of this story, as well as passages depicting Miss Stoner and her sister, to understand the construction of white Victorian femininity.
 											<ul>
-												<li>Image: Friedrich, Josef. <em><a aria-label="External Link" href="https:/www.arthur-conan-doyle.com/index.php/The_Adventure_of_the_Speckled_Band#Illustrations">She writhed as one who is in terrible pain</a></em>. 1906. <em>The Arthur Conan Doyle Encyclopedia</em></li>
+												<li>Image: Friedrich, Josef. <em><a aria-label="External Link" href="https://www.arthur-conan-doyle.com/index.php/The_Adventure_of_the_Speckled_Band#Illustrations">She writhed as one who is in terrible pain</a></em>. 1906. <em>The Arthur Conan Doyle Encyclopedia</em></li>
 											</ul>
 										</li>
 										<li>Contrast these depictions of the endangered white woman with the descriptions of her stepfather, and in particular his associations with India and Indian animals</li>
@@ -334,7 +334,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Emma Soberano, dev. “Detection and the Logics of Empire.” Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, Oishani Sengupta, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="/html/lesson_plans/detection_and_empire.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/detection_and_empire.html</a>.</p><!-- Change -->
+					<p>Emma Soberano, dev. “Detection and the Logics of Empire.” Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, Oishani Sengupta, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="/html/lesson_plans/contemporary_detection_and_empire.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_detection_and_empire.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
