u for once know artists

--- a/html/lesson_plans/call_for_lesson_plan_participants.html
+++ b/html/lesson_plans/call_for_lesson_plan_participants.html
@@ -83,7 +83,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous Indian Artist. <a aria-label="External Link" href="https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg">Chintz</a>. Cotton, [eighteenth century]. Cooper Hewitt, Smithsonian Design Museum, 18481761.</p>
+					<p>Once Known Indian Artist. <a aria-label="External Link" href="https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg">Chintz</a>. Cotton, [eighteenth century]. Cooper Hewitt, Smithsonian Design Museum, 18481761.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
