--- a/html/syllabi/call_for_syllabi_and_syllabus_clusters.html
+++ b/html/syllabi/call_for_syllabi_and_syllabus_clusters.html
@@ -87,7 +87,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/153683/blanket-or-rug">Blanket or Rug</a>. [1801-1900]. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our <a href="/html/assessments/call_for_assessments.html">Call for Assessments</a> page alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+					<p>Once Known Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/153683/blanket-or-rug">Blanket or Rug</a>. [1801-1900]. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our <a href="/html/assessments/call_for_assessments.html">Call for Assessments</a> page alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
 				</section>
 
 									
