--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										<img src="/img/home/uvc_0062-1200px.jpg" srcset="/img/home/uvc_0062-1800px.jpg 1800w, /img/home/uvc_0062-1650px.jpg 1650w, /img/home/uvc_0062-1500px.jpg 1500w, /img/home/uvc_0062-1350px.jpg 1350w, /img/home/uvc_0062-1200px.jpg 1200w, /img/home/uvc_0062-1050px.jpg 1050w, /img/home/uvc_0062-900px.jpg 900w, /img/home/uvc_0062-750px.jpg 750w, /img/home/uvc_0062-600px.jpg 600w, /img/home/uvc_0062-450px.jpg 450w, /img/home/uvc_0062-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Rosy milkweed vine/asclepias rosea laid out in a circular pattern." style="object-position: 50% 30%;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#anonymous-a" id="carousel-label-2">Anon., “Rosy Milkweed Vine/Asclepias Rosea,” late eighteenth century</a></p>
+									<p><a href="#once-known-a" id="carousel-label-2">Once Known Artist, “Rosy Milkweed Vine/Asclepias Rosea,” late eighteenth century</a></p>
 								</div>
 							</div>
 							<!-- Item #3 -->							
@@ -90,7 +90,7 @@
 										<img src="/img/home/uvc_0063-1200px.jpg" srcset="/img/home/uvc_0063-1800px.jpg 1800w, /img/home/uvc_0063-1650px.jpg 1650w, /img/home/uvc_0063-1500px.jpg 1500w, /img/home/uvc_0063-1350px.jpg 1350w, /img/home/uvc_0063-1200px.jpg 1200w, /img/home/uvc_0063-1050px.jpg 1050w, /img/home/uvc_0063-900px.jpg 900w, /img/home/uvc_0063-750px.jpg 750w, /img/home/uvc_0063-600px.jpg 600w, /img/home/uvc_0063-450px.jpg 450w, /img/home/uvc_0063-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Textile in brown, beige, gray, and black grid pattern overlaid by an X." style="object-position: 50% 50%;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#anonymous-samoan" id="carousel-label-3">Anon. Samoan Artist, “Siapo (Tapa Cloth),” c.1917</a></p>
+									<p><a href="#once-known-samoan" id="carousel-label-3">Once Known Samoan Artist, “Siapo (Tapa Cloth),” c.1917</a></p>
 								</div>
 							</div>
 							<!-- Item #4 -->							
@@ -99,7 +99,7 @@
 										<img src="/img/home/uvc_0064-1200px.jpg" srcset="/img/home/uvc_0064-1800px.jpg 1800w, /img/home/uvc_0064-1650px.jpg 1650w, /img/home/uvc_0064-1500px.jpg 1500w, /img/home/uvc_0064-1350px.jpg 1350w, /img/home/uvc_0064-1200px.jpg 1200w, /img/home/uvc_0064-1050px.jpg 1050w, /img/home/uvc_0064-900px.jpg 900w, /img/home/uvc_0064-750px.jpg 750w, /img/home/uvc_0064-600px.jpg 600w, /img/home/uvc_0064-450px.jpg 450w, /img/home/uvc_0064-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Set of four people, one of whom kneels and offers a bowl to another; with tree with white flowers." style="object-position: 50% 45%;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#anonymous-b" id="carousel-label-4">Anon., “Wine Drinking in a Spring Garden,” c.1430</a></p>
+									<p><a href="#once-known-b" id="carousel-label-4">Once Known Artist, “Wine Drinking in a Spring Garden,” c.1430</a></p>
 								</div>
 							</div>
 							<!-- Item #5 -->							
@@ -108,7 +108,7 @@
 										<img src="/img/home/uvc_0065-750px.jpg" srcset="/img/home/uvc_0065-750px.jpg 750w, /img/home/uvc_0065-600px.jpg 600w, /img/home/uvc_0065-450px.jpg 450w, /img/home/uvc_0065-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Wood four legged, twelve hole gameboard with end cup." style="object-position: 50% 70%;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#anonymous-dan" id="carousel-label-5">Anon. Dan Artist, “Gameboard,” late nineteenth/early twentieth century</a></p>
+									<p><a href="#once-known-dan" id="carousel-label-5">Once Known Dan Artist, “Gameboard,” late nineteenth/early twentieth century</a></p>
 								</div>
 							</div>
 							<!-- Item #6 -->							
@@ -117,7 +117,7 @@
 										<img src="/img/home/uvc_0003-1200px.jpg" srcset="/img/home/uvc_0003-1800px.jpg 1800w, /img/home/uvc_0003-1650px.jpg 1650w, /img/home/uvc_0003-1500px.jpg 1500w, /img/home/uvc_0003-1350px.jpg 1350w, /img/home/uvc_0003-1200px.jpg 1200w, /img/home/uvc_0003-1050px.jpg 1050w, /img/home/uvc_0003-900px.jpg 900w, /img/home/uvc_0003-750px.jpg 750w, /img/home/uvc_0003-600px.jpg 600w, /img/home/uvc_0003-450px.jpg 450w, /img/home/uvc_0003-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#kalighat" id="carousel-label-6">Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s</a></p>
+									<p><a href="#kalighat" id="carousel-label-6">Once Known Indian Artist, “Durga Killing the Demon Mahisha,” 1800s</a></p>
 								</div>
 							</div>
 							<!-- Item #7 -->							
@@ -144,7 +144,7 @@
 										<img src="/img/home/uvc_0001-1050px.jpg" srcset="/img/home/uvc_0001-1050px.jpg 1050w, /img/home/uvc_0001-900px.jpg 900w, /img/home/uvc_0001-750px.jpg 750w, /img/home/uvc_0001-600px.jpg 600w, /img/home/uvc_0001-450px.jpg 450w, /img/home/uvc_0001-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure."/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#fante" id="carousel-label-9">Anonymous Fante Artist, Asafo Flag, 1910</a></p>
+									<p><a href="#fante" id="carousel-label-9">Once Known Fante Artist, Asafo Flag, 1910</a></p>
 								</div>
 							</div>
 						</div>
@@ -208,25 +208,25 @@
 
 							<p id="katsushika-hokusai"><em>Slide #1</em>: Katsushika Hokusai 葛飾 北斎. <a aria-label="External Link" href="https://www.artic.edu/artworks/89524/ariwara-no-narihirafrom-the-series-one-hundred-poems-explained-by-the-nurse-hyakunin-isshu-uba-ga-etoki"><em>Ariwara No Narihira – from the Series One Hundred Poems Explained by the Nurse (Hyakunin Isshu Uba Ga Etoki)</em></a>. [1835-36]. Art Institute of Chicago, Chicago, 1928.1094. Clarence Buckingham Collection. <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero 1.0 Universal</a> (CC0 1.0). Public Domain Dedication.</p>
 
-							<p id="anonymous-a"><em>Slide #2</em>: Anonymous. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/761737"><em>Rosy Milkweed Vine/Asclepias Rosea</em></a>. [late eighteenth century]. The Metropolitan Museum of Art, New York, 2017.385. Gift of Mr. and Mrs. Kamran Anwar, in loving memory of Mr. Anwarullah Khan and Amjad Rashid, 2017. Public domain.</p>
+							<p id="once-known-a"><em>Slide #2</em>: Once Known Artist. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/761737"><em>Rosy Milkweed Vine/Asclepias Rosea</em></a>. [late eighteenth century]. The Metropolitan Museum of Art, New York, 2017.385. Gift of Mr. and Mrs. Kamran Anwar, in loving memory of Mr. Anwarullah Khan and Amjad Rashid, 2017. Public domain.</p>
 
-							<p id="anonymous-samoan"><em>Slide #3</em>: Anonymous Samoan Artist. <a aria-label="External Link" href="https://collections.tepapa.govt.nz/object/165397">Siapo (Tapa Cloth)</a>. [c.1917]. Museum of New Zealand | Te Papa Tongarewa, Te Papa (FE001416). Gift of Thomas Trood, 1917. <a aria-label="External Link" href="https://www.tepapa.govt.nz/discover-collections/collections-online/about-collections-online#no-known-copyright">No known copyright restrictions</a>.</p>
+							<p id="once-known-samoan"><em>Slide #3</em>: Once Known Samoan Artist. <a aria-label="External Link" href="https://collections.tepapa.govt.nz/object/165397">Siapo (Tapa Cloth)</a>. [c.1917]. Museum of New Zealand | Te Papa Tongarewa, Te Papa (FE001416). Gift of Thomas Trood, 1917. <a aria-label="External Link" href="https://www.tepapa.govt.nz/discover-collections/collections-online/about-collections-online#no-known-copyright">No known copyright restrictions</a>.</p>
 							
-							<p id="anonymous-b"><em>Slide #4</em>: Anonymous. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/451403">Wine Drinking in a Spring Garden</a>. [c.1430]. The Metropolitan Museum of Art, New York, 57.51.24. Cora Timken Burnett Collection of Persian Miniatures and Other Persian Art Objects, Bequest of Cora Timken Burnett, 1956. Public domain.</p>
+							<p id="once-known-b"><em>Slide #4</em>: Once Known Artist. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/451403">Wine Drinking in a Spring Garden</a>. [c.1430]. The Metropolitan Museum of Art, New York, 57.51.24. Cora Timken Burnett Collection of Persian Miniatures and Other Persian Art Objects, Bequest of Cora Timken Burnett, 1956. Public domain.</p>
 
-							<p id="anonymous-dan"><em>Slide #5</em>: Anonymous Dan Artist. <a aria-label="External Link" href="http://n2t.net/ark:/65665/ys7650bd2fd-016d-461a-be3b-145abbcb9567"><em>Gameboard</em></a>. [late nineteenth/early twentieth century]. Smithsonian Institution. National Museum of African Art, Washington, D.C., 2005-6-218. Gift of Walt Disney World Co., a subsidiary of The Walt Disney Company. Used for education consistent with the principles of fair use under Section 108 of the U.S. Copyright Act. <a aria-label="External Link"  href="https://www.si.edu/Termsofuse">Smithsonian Terms of Use</a>.</p>
+							<p id="once-known-dan"><em>Slide #5</em>: Once Known Dan Artist. <a aria-label="External Link" href="http://n2t.net/ark:/65665/ys7650bd2fd-016d-461a-be3b-145abbcb9567"><em>Gameboard</em></a>. [late nineteenth/early twentieth century]. Smithsonian Institution. National Museum of African Art, Washington, D.C., 2005-6-218. Gift of Walt Disney World Co., a subsidiary of The Walt Disney Company. Used for education consistent with the principles of fair use under Section 108 of the U.S. Copyright Act. <a aria-label="External Link"  href="https://www.si.edu/Termsofuse">Smithsonian Terms of Use</a>.</p>
 						</section>
 
 						<section aria-labelledby="first-edition">
 							<h3 class="carousel-image" id="first-edition">First Edition</h3>
 
-							<p id="kalighat"><em>Slide #6</em>: Anonymous Indian Artist. “<a aria-label="External Link" href="https://clevelandart.org/art/2003.103"><em>Durga Killing the Demon Mahisha</em></a>.” [1800s]. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
+							<p id="kalighat"><em>Slide #6</em>: Once Known Indian Artist. “<a aria-label="External Link" href="https://clevelandart.org/art/2003.103"><em>Durga Killing the Demon Mahisha</em></a>.” [1800s]. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
 
 							<p id="markino"><em>Slide #7</em>: Yoshio Markino. “<a aria-label="External Link" href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, Chatto & Windus, 1910, p. 196. Public domain image.</p>
 
 							<p id="mcrae"><em>Slide #8</em>: Tommy McRae. <a aria-label="External Link" href="https://archive.org/details/cu31924029909060/page/n135/mode/2up">Hunting Scene</a>. Australian Legendary Tales, by Unnamed Yuwaalaraay Informants, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114,  Public domain image.</p>		
 							
-							<p id="fante"><em>Slide #9</em>: Anonymous Fante Artist. <a aria-label="External Link" href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>, [c.1910]. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
+							<p id="fante"><em>Slide #9</em>: Once Known Fante Artist. <a aria-label="External Link" href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>, [c.1910]. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 						</section>
 				</section>
 
