--- a/html/lesson_plans/contemporary_bronte_phillips.html
+++ b/html/lesson_plans/contemporary_bronte_phillips.html
@@ -407,7 +407,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous. <a aria-label="External Link" href="https://artuk.org/discover/artworks/liverpool-in-1680-103703"><em>Liverpool in 1680</em> </a>. Painting. Merseyside Maritime Museum, Liverpool. Supplied by The Public Catalogue Foundation. This work is in the public domain.</p>
+					<p>Once Known Artist. <a aria-label="External Link" href="https://artuk.org/discover/artworks/liverpool-in-1680-103703"><em>Liverpool in 1680</em> </a>. Painting. Merseyside Maritime Museum, Liverpool. Supplied by The Public Catalogue Foundation. This work is in the public domain.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
