--- a/html/lesson_plans/east_asia_visualizing_korea.html
+++ b/html/lesson_plans/east_asia_visualizing_korea.html
@@ -137,7 +137,7 @@
 							
 							<p>D’Anville, Jean Baptiste Bourguignon, et al. <a aria-label="External Link" href="http://hdl.handle.net/1887.1/item:3181739"><em>Royaume de Corée</em></a>. 1735. Leiden University Libraries, COLLBN Port 177 N 115.</p>
 
-							<p><em>Korean Cheonhado Map</em>. 17th–18th century. Ricci Institute for Chinese-Western Cultural History. <em>Note: See <a href="/html/lesson_plans/east_asia_transimperial_introduction.html">header image</a> for “Transimperial Networks and East Asia.” The cheonhado is a category or type of map, of which there are numerous extant versions.</em></p>
+							<p>Once Known Artist. <em>Korean Cheonhado Map</em>. 17th–18th century. Ricci Institute for Chinese-Western Cultural History. <em>Note: See <a href="/html/lesson_plans/east_asia_transimperial_introduction.html">header image</a> for “Transimperial Networks and East Asia.” The cheonhado is a category or type of map, of which there are numerous extant versions.</em></p>
 
 							<p>Plancius, Petrus. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:1594_double_hemisphere_world_map_by_Petrus_Plancius.jpg"><em>1594 Double Hemisphere World Map by Petrus Plancius</em></a>. 1594. <em>Wikimedia Commons</em>.</p>
 
