--- a/html/syllabi/constructing_religion.html
+++ b/html/syllabi/constructing_religion.html
@@ -176,7 +176,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous. “<a aria-label="External Link" href="https://en.m.wikipedia.org/wiki/File:Malacca_in_1831.jpg">Malacca in 1831</a>.” July 1831. <em>Wikipedia</em>. Public domain.</p>
+					<p>Once Known Artist. “<a aria-label="External Link" href="https://en.m.wikipedia.org/wiki/File:Malacca_in_1831.jpg">Malacca in 1831</a>.” July 1831. <em>Wikipedia</em>. Public domain.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
