--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -128,7 +128,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Captions</h3>
 
-					<p>(Left) “<a aria-label="External Link" href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece.</p>
+					<p>(Left) Once Known Photographer. “<a aria-label="External Link" href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece.</p>
 					
 					<p>(Right) Gutekunst, Frederick. “<a aria-label="External Link" href="https://archive.org/details/highcastehinduwo00ramaiala/page/n5/mode/2up">Pandita Ramabai Sarasvati</a>.” <em>The High-Caste Hindu Woman</em>, by Pandita Ramabai Sarasvati, Press of The Jas B. Rodgers Printing Co., 1887, frontispiece.</p>		
 				</section>
