--- a/html/assessments/archives_of_empire.html
+++ b/html/assessments/archives_of_empire.html
@@ -176,7 +176,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:The_Rani_of_Jhansi_leads_her_troops_in_the_siege_of_Jhansi.jpg.">The Rani of Jhansi Leads Her Troops in the Siege of Jhansi</a></em>. Gouache on paper, [nineteenth century], <em>Wikimedia Commons</em>. Public domain.</p>
+					<p>Once Known Artist. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:The_Rani_of_Jhansi_leads_her_troops_in_the_siege_of_Jhansi.jpg.">The Rani of Jhansi Leads Her Troops in the Siege of Jhansi</a></em>. Gouache on paper, [nineteenth century], <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 
 				<section class="small" aria-labelledby="citation">
