--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -141,7 +141,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Captions</h3>
 
-					<p>(Left) Anonymous. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Amy_Levy_1.jpg">Amy Levy</a>. [nineteenth century]. <em>Wikimedia Commons</em>. Public domain.</p>
+					<p>(Left) Once Known Photographer. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Amy_Levy_1.jpg">Amy Levy</a>. [nineteenth century]. <em>Wikimedia Commons</em>. Public domain.</p>
 
 					<p>(Right) PDH. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Grant_morrison2.jpg">Grant Morrison</a>. 22 July 2006. <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/2.0/deed.en">Creative Commons Attribution 2.0 Generic</a> (CC BY 2.0).</p>
 				</section>
