--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -371,7 +371,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg">Hong Kong and Victoria Peak Circa 1855.</a>” c.1855. <em>Wikimedia Commons</em>. Public domain.</p>
+					<p>Once Known Artist. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg">Hong Kong and Victoria Peak Circa 1855.</a>” c.1855. <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 
 				<section class="small" aria-labelledby="citation">
