--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -255,7 +255,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg">Commissioner Lin and the Destruction of the Opium in 1839.</a>” c.1840. <em>Wikimedia Commons</em>. Public domain.</p>
+					<p>Once Known Artist. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg">Commissioner Lin and the Destruction of the Opium in 1839.</a>” c.1840. <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 
 				<section class="small" aria-labelledby="citation">
