--- a/html/lesson_plans/palestine_teaching_romanticism_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_victorianism.html
@@ -287,7 +287,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous. <a aria-label="External Link"  href="https://commons.wikimedia.org/wiki/File:Four_holy_cities_plaque.jpg"><em>Holy Cities Plaque</em></a>. 19th century. Hebraic Collections of the Library of Congress, <em>Wikimedia Commons</em>. Public domain.</p>
+					<p>Once Known Artist. <a aria-label="External Link"  href="https://commons.wikimedia.org/wiki/File:Four_holy_cities_plaque.jpg"><em>Holy Cities Plaque</em></a>. 19th century. Hebraic Collections of the Library of Congress, <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 			
 				<section class="small" aria-labelledby="citation">
