directors for founders

--- a/html/about/associate_editors.html
+++ b/html/about/associate_editors.html
@@ -56,7 +56,7 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
 
-						<p><em>Undisciplining the Victorian Classroom</em> (UVC) expanded in 2023, recruiting three Associate Editors to work with the project's Founding Editors to expand the project's offerings and share organizational knowledge and responsibilites.  All former contributors to UVC, the Associate Editors share a commitment to creating accessible, antiracist pedagogy for the Victorian classroom. </p>
+						<p><em>Undisciplining the Victorian Classroom</em> (UVC) expanded in 2023 by recruiting Associate Editors to work with the Directors to expand the project's offerings and share organizational knowledge and responsibilites.  All former contributors to UVC, the Associate Editors share a commitment to creating accessible, antiracist pedagogy for the Victorian classroom. </p>
 					</section>
 
 					<section aria-labelledby="biographies">
