--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
 					</ul>
 				</section>
 
-				<section class="founding-dev" aria-labelledby="founders">
-					<h2 id="founders">Founding Developers</h2>
+				<section class="directors" aria-labelledby="directors">
+					<h2 id="directors">Directors</h2>
 					<ul>
-						<li><strong>Pearl Chaozon Bauer</strong> (The Nueva School)</li>
 						<li><strong>Ryan D. Fong</strong> (Kalamazoo College)</li>
 						<li><strong>Sophia Hsu</strong> (Lehman College, CUNY)</li>
+						<li><strong>Cherrie Kwok</strong> (University of Virginia)</li>
 						<li><strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</li>
 					</ul>
 				</section>
@@ -232,7 +232,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h2 id="citation">Project/Page Citation (MLA)</h2>
-					<p>Pearl Chaozon Bauer, Ryan D. Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021-23, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
+					<p>Ryan D. Fong, Sophia Hsu, Cherrie Kwok, and Adrian S. Wisnicki, dirs. <em>Undisciplining the Victorian Classroom</em>, 2021-24, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
 				</section>
 			</main>
 			
