--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -55,7 +55,7 @@
 
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
-					<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding developers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
+					<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The project team is grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
 				</section>
 
 				<section aria-labelledby="contribs">
@@ -119,7 +119,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Owen Jones. “Indian No. 4.” <em><a aria-label="External Link" href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+					<p>Owen Jones. “Indian No. 4.” <em><a aria-label="External Link" href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain. The Directors of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
