--- a/sitemap.html
+++ b/sitemap.html
@@ -189,7 +189,7 @@
 								<!-- <li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor (2023)</a></li> -->
 								<li><a href="/html/about/statement_on_using_generative_ai.html">Statement on Using Generative AI</a></li>
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
-								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
+								<li><a href="/html/about/directors_advisors.html">Directors and Advisors</a></li>
 								<li><a href="/html/about/associate_editors.html">Associate Editors</a></li>
 								<li><a href="/html/about/assistant_editors.html">Assistant Editors</a></li>
 								<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
@@ -207,7 +207,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p>Owen Jones. “Persian No. 1.” <em><a aria-label="External Link" href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXI. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+					<p>Owen Jones. “Persian No. 1.” <em><a aria-label="External Link" href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXI. Public domain. The Directors of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
