--- a/common/footer.html
+++ b/common/footer.html
@@ -1,8 +1,8 @@
 <footer id="footer">
   <p>
-    <span class="site-detail"><a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/"><span>CC BY 4.0</span></a>, 2020-2023</span>
+    <span class="site-detail"><a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/"><span>CC BY 4.0</span></a>, 2020-2024</span>
     
-    <span class="site-detail">Community edition, 2023</span>
+    <span class="site-detail">Community edition, 2023-2024</span>
 
     <span class="site-detail"><a aria-label="External Link" href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom"><span>Peer review</span></a>, 2021</span>
     
