--- a/html/about/assistant_editors.html
+++ b/html/about/assistant_editors.html
@@ -47,7 +47,7 @@
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
 						<li><a href="#overview">Overview</a></li>
-						<li><a href="#biographies">Biographies</a></li>
+						<li><a href="#ae-biographies">Assistant Editor Biographies</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page Citation (MLA)</a></li>
 					</ol>
@@ -59,8 +59,8 @@
 					<p>The primary responsibilities of <em>Undisciplining the Victorian Classroom</em>'s assistant editors are to create and prepare content for online publication, including website maintenance and development, developing new topic clusters, hosting conversations, and seeking out potential guest hosts for Zoomcasts.</p>
 				</section>
 
-				<section aria-labelledby="biographies">
-					<h3 id="biographies">Biographies</h3>
+				<section aria-labelledby="ae-biographies">
+					<h3 id="ae-biographies">Assistant Editor Biographies</h3>
 
 					<p><img width="163" height="203" loading="lazy" src="/img/about/assistant_editors/figgins-570px.jpg" srcset="/img/about/assistant_editors/figgins-570px.jpg 570w, /img/about/assistant_editors/figgins-446px.jpg 446w, /img/about/assistant_editors/figgins-390px.jpg 390w, /img/about/assistant_editors/figgins-350px.jpg 350w, /img/about/assistant_editors/figgins-285px.jpg 285w, /img/about/assistant_editors/figgins-223px.jpg 223w, /img/about/assistant_editors/figgins-195px.jpg 195w, /img/about/assistant_editors/figgins-175px.jpg 175w" sizes="(min-width: 1000px) 175px, (min-width: 780px) 195px, (min-width: 740px) 325px, (min-width: 480px) calc(42.92vw + 16px), calc(100vw - 35px)" alt="Headshot of Kristen Figgins."/><strong>Kristen L. Figgins</strong> holds a Ph.D. in English from the University of Arkansas. Her specialization is nineteenth-century British literature, critical animal studies, and adaptation. Her current research involves tracing how developments in natural science and animal rights philosophy are adapted in transhistorical literature. You can read her recent research in such publications as <em>Literature/Film Quarterly</em>, <em>Adaptation Before Cinema</em> (Palgrave, 2023), and her co-edited book, <em> Boom or Bust: Narrative, Life, and Culture in the West Texas Oil Patch</em> (Oklahoma University Press, 2021). <em>Pronouns:</em> she/they.</p>
 					
