--- a/html/about/associate_editors.html
+++ b/html/about/associate_editors.html
@@ -47,7 +47,7 @@
 						<h3 id="menu">Menu</h3>
 						<ol class="menu">
 							<li><a href="#overview">Overview</a></li>
-							<li><a href="#biographies">Biographies</a></li>
+							<li><a href="#ae-biographies">Associate Editor Biographies</a></li>
 							<li><a href="#caption">Tile/Header Image Caption</a></li>
 							<li><a href="#citation">Page Citation (MLA)</a></li>
 						</ol>
@@ -59,8 +59,8 @@
 						<p><em>Undisciplining the Victorian Classroom</em> (UVC) expanded in 2023 by recruiting Associate Editors to work with the Directors to expand the project's offerings and share organizational knowledge and responsibilites.  All former contributors to UVC, the Associate Editors share a commitment to creating accessible, antiracist pedagogy for the Victorian classroom. </p>
 					</section>
 
-					<section aria-labelledby="biographies">
-						<h3 id="biographies">Biographies</h3>
+					<section aria-labelledby="ae-biographies">
+						<h3 id="ae-biographies">Associate Editor Biographies</h3>
 
 						<p><img class="image-border" width="163" height="203" loading="lazy" src="/img/about/associate_editors/bindas-570px.jpg" srcset="/img/about/associate_editors/bindas-570px.jpg 570w, /img/about/associate_editors/bindas-446px.jpg 446w, /img/about/associate_editors/bindas-390px.jpg 390w, /img/about/associate_editors/bindas-350px.jpg 350w, /img/about/associate_editors/bindas-285px.jpg 285w, /img/about/associate_editors/bindas-223px.jpg 223w, /img/about/associate_editors/bindas-195px.jpg 195w, /img/about/associate_editors/bindas-175px.jpg 175w" sizes="(min-width: 1000px) 175px, (min-width: 780px) 195px, (min-width: 740px) 325px, (min-width: 480px) calc(42.92vw + 16px), calc(100vw - 35px)" alt="Headshot of Ava Bindas"/><strong>Ava Bindas</strong> (University of California Davis) is a PhD candidate in English with a designated emphasis in Feminist Theory and Research at the University of California Davis. She recently published “<a aria-label="External Link" href="https://onemorevoice.org/html/bipoc-voices/essays/bv-essay-bindas-1.html">Editing, Education, and Imitation in Indian Missionary Conversion Accounts</a>” as part of the <em>One More Voice</em> “BIPOC Voices in the Victorian Periodical Press” project, which examines instantiations of individual voices in nineteenth-century missionary periodicals accredited to indigenous Indian speakers who narrate their conversions to Christianity. Currently, she serves as an Associate Editor for <em>Undisciplining the Victorian Classroom</em> (UVC), and is currently writing a dissertation about Victorian novels of the recent past and how minor modes of history imagine and mediate gendered and racialized constructions of nineteenth-century ordinary life. <em>Pronouns:</em> she/her.</p>
 					
