--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -108,6 +108,7 @@
 						<li><strong>Dana Aicha Shaaban</strong> (Texas Christian University)</li>
 						<li><strong>Breanna Simpson</strong> (York University)</li>
 						<li><strong>Emma Soberano</strong> (University of Michigan)</li>
+						<li><strong>Clare Stainthorp</strong> (Queen Mary University of London)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 						<li><strong>Winter Jade Werner</strong> (Wheaton College)</li>
