--- a/html/syllabi/identity_and_belief.html
+++ b/html/syllabi/identity_and_belief.html
@@ -76,7 +76,7 @@
 </section>
 
 <section aria-labelledby="overview">
-	h3 id="overview">Syllabus Overview</h3>
+<h3 id="overview"> Syllabus Overview</h3>
 
 		<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: <a href="/pdf/syllabi/stainthorp_identity_and_belief.pdf">PDF</a> | <a href="/pdf/syllabi/stainthorp_identity_and_belief.docx">Word</a></p>
 				
@@ -150,7 +150,7 @@
 
 <p>Viswanathan, Gauri.<em> Outside the Fold: Conversion, Modernity, and Belief</em>. Princeton University Press, 1998.</p>
 
-<p><br />Werner, Winter Jade, and Mimi Winick. “<a aria-label="External Link" href="https://doi.org/10.1215/00267929-10088731">How to See Global Religion: Comparativism, Connectivity, and the Undisciplining of Victorian Literary Studies</a>.” <em>Modern Language Quarterly</em>, vol. 83, no. 4, 2022, pp. 499—520.</p>
+<p>Werner, Winter Jade, and Mimi Winick. “<a aria-label="External Link" href="https://doi.org/10.1215/00267929-10088731">How to See Global Religion: Comparativism, Connectivity, and the Undisciplining of Victorian Literary Studies</a>.” <em>Modern Language Quarterly</em>, vol. 83, no. 4, 2022, pp. 499—520.</p>
 </section>
 
 <section aria-labelledby="series">
