u sitemap add syllabus

--- a/sitemap.html
+++ b/sitemap.html
@@ -132,6 +132,7 @@
 								</li>
 								<li>The Nineteenth-Century Religious Other
 									<ol>
+										<li><a href="/html/syllabi/identity_and_belief.html">Identity and Belief in Victorian Britain</a></li>
 										<li><a href="/html/syllabi/muslim_other.html">The Muslim “Other” in Nineteenth-Century British Literature</a></li>
 										<li><a href="/html/syllabi/jewish_british.html">Nineteenth-Century Jewish British Literature</a></li>
 										<li><a href="/html/syllabi/hinduism_imperial.html">Hinduism and Imperial Interventions in Victorian Literature</a></li>
