--- a/html/about/statement_on_using_generative_ai.html
+++ b/html/about/statement_on_using_generative_ai.html
@@ -47,7 +47,7 @@
 					<h3 id="statement-specs">Statement Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Contributors:</strong> Ava Bindas, Pearl Chaozon Bauer, Kristen Layne Figgins, H Fogarty, Ryan Fong, Cherrie Kwok, Indu Ohri, Sophia Hsu, Adrian S. Wisnicki (lead) <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Contributors:</strong> Ava Bindas, Pearl Chaozon Bauer, Kristen Layne Figgins, Jude Fogarty, Ryan Fong, Cherrie Kwok, Indu Ohri, Sophia Hsu, Adrian S. Wisnicki (lead) <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Publication Date:</strong> 2023</p>
 					</div>
@@ -128,7 +128,7 @@
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>Ava Bindas, Pearl Chaozon Bauer, Kristen Layne Figgins, H Fogarty, Ryan Fong, Cherrie Kwok, Indu Ohri, Sophia Hsu, Adrian S. Wisnicki (lead). “Statement on Using Generative AI.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/about/statement_on_using_generative_ai.html" class="cite-link">https://undiscipliningvc.org/html/about/statement_on_using_generative_ai</a>.</p>
+					<p>Ava Bindas, Pearl Chaozon Bauer, Kristen Layne Figgins, Jude Fogarty, Ryan Fong, Cherrie Kwok, Indu Ohri, Sophia Hsu, Adrian S. Wisnicki (lead). “Statement on Using Generative AI.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/about/statement_on_using_generative_ai.html" class="cite-link">https://undiscipliningvc.org/html/about/statement_on_using_generative_ai</a>.</p>
 				</section>
 			</main>
 			
