--- a/html/assessments/call_for_assessments.html
+++ b/html/assessments/call_for_assessments.html
@@ -82,7 +82,7 @@
 
 					<p>Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of <a href="/html/assessments.html">previous assessments</a>.</p>
 
-					<p>Questions about this CFA and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Sophia Hsu (<a aria-label="External Client"  href="mailto:sophia.hsu@lehman.cuny.edu">sophia.hsu@lehman.cuny.edu</a>) and H Fogarty (<a aria-label="External Client" href="mailto:hrfogart@buffalo.edu">hrfogart@buffalo.edu</a>).</p>
+					<p>Questions about this CFA and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Sophia Hsu (<a aria-label="External Client"  href="mailto:sophia.hsu@lehman.cuny.edu">sophia.hsu@lehman.cuny.edu</a>) and Jude Fogarty (<a aria-label="External Client" href="mailto:hrfogart@buffalo.edu">hrfogart@buffalo.edu</a>).</p>
 
 					<p>To be placed on the UVC mailing list, kindly fill out this <a aria-label="External Link" href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google form</a>.</p>
 				</section>
