u assessment to assignment language

--- a/html/lesson_plans/call_for_lesson_plan_decadence.html
+++ b/html/lesson_plans/call_for_lesson_plan_decadence.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Call for Participants: Lesson Plans on Female POC Folklorists (2023) | Undisciplining the Victorian Classroom</title>
+    <title>Call for Participants: Global Decadence and Aestheticism Lesson Plan Cluster (2024) | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Announces a call for participants (2023) to contribute to a cluster of lesson plans featuring and centering female People of Color (POC) folklorists."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plans">
-				<h2 id="lesson-plans">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</h2>
+				<h2 id="lesson-plans">Call for Participants: Global Decadence and Aestheticism Lesson Plan Cluster (2024)</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/lesson_plans/uvc_0071-1800px.jpg" srcset="/img/lesson_plans/uvc_0071-1800px.jpg 1800w, /img/lesson_plans/uvc_0071-1650px.jpg 1650w, /img/lesson_plans/uvc_0071-1500px.jpg 1500w, /img/lesson_plans/uvc_0071-1350px.jpg 1350w, /img/lesson_plans/uvc_0071-1200px.jpg 1200w, /img/lesson_plans/uvc_0071-1050px.jpg 1050w, /img/lesson_plans/uvc_0071-900px.jpg 900w, /img/lesson_plans/uvc_0071-750px.jpg 750w, /img/lesson_plans/uvc_0071-600px.jpg 600w, /img/lesson_plans/uvc_0071-450px.jpg 450w, /img/lesson_plans/uvc_0071-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
