--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<li><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw"></i> Zoomcasts</span></a></li>
 						<li><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw"></i> Lesson Plans</span></a></li>
 						<li><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw"></i> Syllabi</span></a></li>
-						<li><a href="/html/assessments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assessments</span></a></li>
+						<li><a href="/html/assignments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assignments</span></a></li>
 						<li><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li>
 					</ul>
 				</section>
