--- a/sitemap.html
+++ b/sitemap.html
@@ -167,19 +167,19 @@
 							</ol>
 						</li>
 
-						<li role="none"><a href="/html/assessments.html"><span id="syllabi">Assessments</span></a>
+						<li role="none"><a href="/html/assignments.html"><span id="assignments">Assignments</span></a>
 							<ol>
-								<!-- <li><a href="/html/assessments/call_for_assessments.html">Call for Assessments (2023)</a></li> -->
+								<!-- <li><a href="/html/assignments/call_for_assignments.html">Call for Assignments (2023)</a></li> -->
 								<li>Students in the Archives
 									<ol>
-										<li><a href="/html/assessments/archives_of_empire.html">Archives of Empire</a></li>
-										<li><a href="/html/assessments/exploring_archives.html">Exploring the Archives</a></li>
+										<li><a href="/html/assignments/archives_of_empire.html">Archives of Empire</a></li>
+										<li><a href="/html/assignments/exploring_archives.html">Exploring the Archives</a></li>
 									</ol>
 								</li>
 								<li>Widening the Empire
 									<ol>
-										<li><a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a></li>
-										<li><a href="/html/assessments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a></li>
+										<li><a href="/html/assignments/(post-)colonial_biography.html">(Post-)Colonial Biography</a></li>
+										<li><a href="/html/assignments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a></li>
 									</ol>
 								</li>
 							</ol>
