--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessment">
 				<h2 id="assessment">(Post-)Colonial Biography</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/assessments/uvc_0066-1800px.jpg" srcset="/img/assessments/uvc_0066-1800px.jpg 1800w, /img/assessments/uvc_0066-1650px.jpg 1650w, /img/assessments/uvc_0066-1500px.jpg 1500w, /img/assessments/uvc_0066-1350px.jpg 1350w, /img/assessments/uvc_0066-1200px.jpg 1200w, /img/assessments/uvc_0066-1050px.jpg 1050w, /img/assessments/uvc_0066-900px.jpg 900w, /img/assessments/uvc_0066-750px.jpg 750w, /img/assessments/uvc_0066-600px.jpg 600w, /img/assessments/uvc_0066-450px.jpg 450w, /img/assessments/uvc_0066-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="“Arms of the British Empire”: Crest with lions and crowns, horned deer on either side, and woman with anchor above."/>
+          	<img src="/img/assignments/uvc_0066-1800px.jpg" srcset="/img/assignments/uvc_0066-1800px.jpg 1800w, /img/assignments/uvc_0066-1650px.jpg 1650w, /img/assignments/uvc_0066-1500px.jpg 1500w, /img/assignments/uvc_0066-1350px.jpg 1350w, /img/assignments/uvc_0066-1200px.jpg 1200w, /img/assignments/uvc_0066-1050px.jpg 1050w, /img/assignments/uvc_0066-900px.jpg 900w, /img/assignments/uvc_0066-750px.jpg 750w, /img/assignments/uvc_0066-600px.jpg 600w, /img/assignments/uvc_0066-450px.jpg 450w, /img/assignments/uvc_0066-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="“Arms of the British Empire”: Crest with lions and crowns, horned deer on either side, and woman with anchor above."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -57,7 +57,7 @@
 						
 						<p><strong>Webpage Developer:</strong> Adrian S. Wisnicki</p>
 
-						<p><strong>Associated Assessment:</strong> Riya Das, “<a href="/html/assessments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a>”</p>
+						<p><strong>Associated Assessment:</strong> Riya Das, “<a href="/html/assignments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a>”</p>
 
 						<p><strong>Cluster Title:</strong> Widening the Empire</p>
 
@@ -145,7 +145,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Amanda Mingail Shubert, dev. “(Post-)Colonial Biography.” Sarah Ohmer, peer rev.;  Pearl Chaozon Bauer, assess. guide; Jude Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/(post-)colonial_biography.html" class="cite-link">https://undiscipliningvc.org/html/assessments/(post-)colonial_biography.html</a>.</p>
+					<p>Amanda Mingail Shubert, dev. “(Post-)Colonial Biography.” Sarah Ohmer, peer rev.;  Pearl Chaozon Bauer, assess. guide; Jude Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assignments/(post-)colonial_biography.html" class="cite-link">https://undiscipliningvc.org/html/assignments/(post-)colonial_biography.html</a>.</p>
 				</section>
 			</main>
 			
