--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessment">
 				<h2 id="assessment">Recovering and Reevaluating Anglophone Writers</h2>
 					<div class="aspect-ratio-box">
-          	<img style="object-position: 50% 0%;" src="/img/assessments/uvc_0059-0060-1800px.jpg" srcset="/img/assessments/uvc_0059-0060-1800px.jpg 1800w, /img/assessments/uvc_0059-0060-1650px.jpg 1650w, /img/assessments/uvc_0059-0060-1500px.jpg 1500w, /img/assessments/uvc_0059-0060-1350px.jpg 1350w, /img/assessments/uvc_0059-0060-1200px.jpg 1200w, /img/assessments/uvc_0059-0060-1050px.jpg 1050w, /img/assessments/uvc_0059-0060-900px.jpg 900w, /img/assessments/uvc_0059-0060-750px.jpg 750w, /img/assessments/uvc_0059-0060-600px.jpg 600w, /img/assessments/uvc_0059-0060-450px.jpg 450w, /img/assessments/uvc_0059-0060-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="(Left) Head and shoulders portrait of Amy Levy. (Right) Head and shoulders portrait of Grant Morrison."/>
+          	<img style="object-position: 50% 0%;" src="/img/assignments/uvc_0059-0060-1800px.jpg" srcset="/img/assignments/uvc_0059-0060-1800px.jpg 1800w, /img/assignments/uvc_0059-0060-1650px.jpg 1650w, /img/assignments/uvc_0059-0060-1500px.jpg 1500w, /img/assignments/uvc_0059-0060-1350px.jpg 1350w, /img/assignments/uvc_0059-0060-1200px.jpg 1200w, /img/assignments/uvc_0059-0060-1050px.jpg 1050w, /img/assignments/uvc_0059-0060-900px.jpg 900w, /img/assignments/uvc_0059-0060-750px.jpg 750w, /img/assignments/uvc_0059-0060-600px.jpg 600w, /img/assignments/uvc_0059-0060-450px.jpg 450w, /img/assignments/uvc_0059-0060-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="(Left) Head and shoulders portrait of Amy Levy. (Right) Head and shoulders portrait of Grant Morrison."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -57,7 +57,7 @@
 
 						<p><strong>Webpage Developers:</strong> Ava Bindas; Kristen Layne Figgins; Adrian S. Wisnicki</p>
 
-						<p><strong>Associated Assessment:</strong> Amanda Shubert, “<a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a>”</p>
+						<p><strong>Associated Assessment:</strong> Amanda Shubert, “<a href="/html/assignments/(post-)colonial_biography.html">(Post-)Colonial Biography</a>”</p>
 
 						<p><strong>Cluster Theme:</strong> Widening the Empire</p>
 
@@ -148,7 +148,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Riya Das, dev. “Recovering and Reevaluating Anglophone Writers.” Sarah Ohmer, peer rev.; Adrian S. Wisnicki, assess. guide; Jude Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/recovering_reevaluating.html" class="cite-link">https://undiscipliningvc.org/html/assessments/recovering_reevaluating.html</a>.</p>
+					<p>Riya Das, dev. “Recovering and Reevaluating Anglophone Writers.” Sarah Ohmer, peer rev.; Adrian S. Wisnicki, assess. guide; Jude Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assignments/recovering_reevaluating.html" class="cite-link">https://undiscipliningvc.org/html/assignments/recovering_reevaluating.html</a>.</p>
 				</section>
 			</main>
 			
