--- a/html/assignments.html
+++ b/html/assignments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Peer-Review Assignments | Undisciplining the Victorian Classroom</title>
+		<title>Assignments | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Introduces and organizes a series of peer-reviewed assignments focused on teaching Victorian Studies through a positive, race-conscious lens."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -42,7 +42,7 @@
 
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
-					<p>These assignments use innovative pedagogical approaches that are antiracist, antiableist and anticolonialist in content and/or form. While they feature a Victorian-era component, they can be adapted for a variety of teaching contexts. We offer these assignments in an effort to help us reimagine a Victorian Studies that empowers students through different forms of critical and creative engagement.</p>
+					<p>These peer-reviewed assignments use innovative pedagogical approaches that are antiracist, antiableist and anticolonialist in content and/or form. While they feature a Victorian-era component, they can be adapted for a variety of teaching contexts. We offer these assignments in an effort to help us reimagine a Victorian Studies that empowers students through different forms of critical and creative engagement.</p>
 				</section>
 
 				<!-- <section aria-labelledby="assignments">
