--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -42,7 +42,7 @@
 
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
-					<p>These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
+					<p>These peer-reviewed lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
 				<section aria-labelledby="decadence-cfp">
