--- a/html/syllabi.html
+++ b/html/syllabi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Peer-Review Syllabi | Undisciplining the Victorian Classroom</title>
+		<title>Syllabi | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Introduces and organizes in clusters a series of peer-reviewed syllabi focused on teaching Victorian Studies through a positive, race-conscious lens."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
